v2基盤構築　とりあえずimgはOK